# google-photos-pdf

./: .aider.conf.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  PLAN.md  README.md  bump_version.sh  check.sh  devbox.json  flake.nix  main.py  pyproject.toml  requirements.txt
scripts/: generate_test_data.py
tests/: conftest.py  test_main.py
