[tool.poetry]
name = "google-photos-pdf"
version = "0.1.8"  # Auto-updated by bump_version.sh
description = "Convert Google Photos ZIP exports to a single PDF."
authors = ["Andrey Stepantsov <andrey.stepantsov@gmail.com>"]
package-mode = false  # <--- CRITICAL FIX

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
pillow-heif = "^0.17.0"
img2pdf = "^0.5.1"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
